[gd_scene load_steps=12 format=3 uid="uid://1jkgmnrwn3lf"]

[ext_resource type="Script" uid="uid://dsjg6n5l8cmdm" path="res://Main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://xtarlusxkv5h" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cmv1ye27ifcfn" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="4_lquwl"]
[ext_resource type="Script" uid="uid://dks8nvhb15ae" path="res://Score.gd" id="5_7mycd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.88164, 0.368467, 0.34187, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ig7tw"]
material = SubResource("StandardMaterial3D_ig7tw")

[sub_resource type="Curve3D" id="Curve3D_ig7tw"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -23, 0, -18, 0, 0, 0, 0, 0, 0, 22.9489, 0, -18.0023, 0, 0, 0, 0, 0, 0, 13, 0, 12, 0, 0, 0, 0, 0, 0, -13, 0, 12),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="Theme" id="Theme_272bh"]
default_font = ExtResource("4_lquwl")
default_font_size = 40

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_7dm0k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 18, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 15, 6)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 0, -18)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 12)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 12)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, -18)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_ig7tw")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(5.01434e-05, 0, -1, 0, 1, 0, 1, 0, 5.01434e-05, -23, 0, -18)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_272bh")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 85.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_7mycd")

[node name="GameOver" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="Message" type="Label" parent="UserInterface/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -14.0
offset_right = 107.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
horizontal_alignment = 1

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
